# python-library-template

./: CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  dev-requirements.txt  pypi_release.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
docs/source/: index.rst
foobar/: __init__.py  _version.py
foobar/tests/: test_version.py
src/foobar/: __init__.py
tests/: test_version.py
tests/test_foobar/: test_add.py  test_version.py
