[metadata]
name = foobar
version = 0.0.1
description = Some description
long_description = file: README.rst
long_description_content_type = text/x-rst
# url = <url>
# project_urls =
#     Source = <url>
#     Tracker = <url>
#     Changelog = <url>
# download_url = <url>
author = Jackson L. Lee
author_email = jacksonlunlee@gmail.com
license = MIT License
license_files = LICENSE.txt
# keywords =
#     computational linguistics
# classifiers =
#     # https://pypi.org/classifiers/
#     Development Status :: 1 - Planning

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7
install_requires =
    importlib-metadata >= 1.0 ; python_version < '3.8'
zip_safe = false

[options.packages.find]
where = src

# [options.package_data]
# dir_name = files_possibly_with_glob_pattern_matching

# [options.entry_points]
# console_scripts =
#     executable-name = package.module:function

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = -vv
